--- a/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AuthManager.apk/res/values-ro/strings.xml
@@ -218,6 +218,8 @@
     <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s aplicații pot accesa contul dvs. Mi</string>
     <string name="HIPS_Perm_add_voicemail">Mesaje vocale</string>
     <string name="HIPS_Perm_add_voicemail_Desc">adăugare mesaje vocale</string>
+    <string name="HIPS_Perm_background_start_activity">Pornire în fundal</string>
+    <string name="HIPS_Perm_background_start_activity_Desc">pornire în fundal</string>
     <string name="HIPS_Perm_get_accounts">Accesare conturi de pe telefon</string>
     <string name="HIPS_Perm_get_accounts_Desc">accesarea tuturor conturilor de pe telefon</string>
     <string name="HIPS_Perm_get_tasks">Obținerea sarcinilor</string>
@@ -230,6 +232,8 @@
     <string name="HIPS_Perm_process_outgoing_calls_Desc">monitorizarea și încheierea apelurilor</string>
     <string name="HIPS_Perm_read_notification_sms">Serviciu SMS</string>
     <string name="HIPS_Perm_read_notification_sms_Desc">citire SMS-uri</string>
+    <string name="HIPS_Perm_show_when_locked">Afișare în Blocarea ecranului</string>
+    <string name="HIPS_Perm_show_when_locked_Desc">fie afișată în Blocarea ecranului</string>
     <string name="HIPS_Perm_use_sip">Servicii video</string>
     <string name="HIPS_Perm_use_sip_Desc">utilizarea SIP pentru partajare videoclipuri</string>
     <string name="HIPS_SecurityPrompt_Accept">Permit (%d)</string>
