--- a/Romanian/main/Email.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Email.apk/res/values-ro/strings.xml
@@ -3,7 +3,7 @@
     <string name="SMTP_independent_verification_text">Verificare independentă SMTP</string>
     <string name="SMTP_password_text">Parolă</string>
     <string name="SMTP_username_text">Nume de utilizator</string>
-    <string name="account_duplicate_dlg_message_fmt">"        Utilizați deja acest nume de utilizator pentru contul \"%s\"."</string>
+    <string name="account_duplicate_dlg_message_fmt">"Utilizați deja acest nume de utilizator pentru contul \"%s\"."</string>
     <string name="account_duplicate_dlg_title">Cont duplicat</string>
     <string name="account_name_toast">Un cont cu același nume există deja</string>
     <string name="account_options_sync_title">Sincronizare</string>
@@ -75,7 +75,7 @@ Actualizaţi acum?"</string>
     <string name="account_setup_exchange_no_certificate">Niciunul</string>
     <string name="account_setup_failed_certificate_inaccessible">Certificat nevalid sau inaccesibil.</string>
     <string name="account_setup_failed_certificate_required">Este necesar un certificat de client. Vă conectaţi la server cu un certificat de client?</string>
-    <string name="account_setup_failed_check_credentials_message">"    Serverul a returnat un mesaj de eroare. Verificaţi numele de utilizator şi parola şi încercaţi din nou."</string>
+    <string name="account_setup_failed_check_credentials_message">Serverul a returnat un mesaj de eroare. Verificaţi numele de utilizator şi parola şi încercaţi din nou.</string>
     <string name="account_setup_failed_dlg_auth_message">Nume de utilizator sau parolă incorecte.</string>
     <string name="account_setup_failed_dlg_bar_title">Modalități de autentificare la %s</string>
     <string name="account_setup_failed_dlg_certificate_message">"Nu se poate conecta în siguranţă la server."</string>
@@ -106,9 +106,9 @@ Actualizaţi acum?"</string>
     <string name="account_setup_incoming_security_label">Tipul de securitate</string>
     <string name="account_setup_incoming_security_none_label">Niciunul</string>
     <string name="account_setup_incoming_security_ssl_label">SSL/TLS</string>
-    <string name="account_setup_incoming_security_ssl_trust_certificates_label">"    SSL/TLS (Acceptaţi toate certificatele)"</string>
+    <string name="account_setup_incoming_security_ssl_trust_certificates_label">SSL/TLS (Acceptaţi toate certificatele)</string>
     <string name="account_setup_incoming_security_tls_label">STARTTLS</string>
-    <string name="account_setup_incoming_security_tls_trust_certificates_label">"    STARTTLS (acceptaţi toate certificatele)"</string>
+    <string name="account_setup_incoming_security_tls_trust_certificates_label">STARTTLS (Acceptaţi toate certificatele)</string>
     <string name="account_setup_incoming_server_label">Server</string>
     <string name="account_setup_incoming_username_label">Nume de utilizator</string>
     <string name="account_setup_incoming_username_label_default_hint">Puteți include domeniul</string>
@@ -134,17 +134,16 @@ Actualizaţi acum?"</string>
     <string name="account_setup_outgoing_port_label">Port</string>
     <string name="account_setup_outgoing_require_login_label">Solicitaţi conectarea</string>
     <string name="account_setup_outgoing_smtp_server_label">Server SMTP</string>
-    <string name="account_setup_security_policies_required_fmt">"    Serverul %s vă solicită permisiunea de a controla de la distanţă
-      unele funcţii de securitate ale dispozitivului Android. Doriţi să finalizaţi configurarea acestui
-      cont?"</string>
+    <string name="account_setup_security_policies_required_fmt">Serverul %s vă solicită permisiunea de a controla de la distanţă unele funcţii de securitate ale dispozitivului Android. Doriţi să finalizaţi configurarea acestui cont?</string>
     <string name="account_setup_security_required_title">Administrarea securităţii de la distanţă</string>
     <string name="account_setup_server_acc_manager_title">Conturi</string>
-    <string name="account_setup_username_password_toast">"    Introduceţi o adresă de e-mail şi o parolă valide."</string>
+    <string name="account_setup_username_password_toast">Introduceţi o adresă de e-mail şi o parolă valide.</string>
     <string name="account_sync_off">Sincronizare cont dezactivată.</string>
     <string name="account_waiting_for_folders_msg">Încărcare dosare…</string>
     <string name="actionbar_large_unread_count">%1$d+ necitite</string>
     <string name="activity_folder_selection">Selectaţi dosarul</string>
     <string name="activity_mailbox_selection">Selectaţi contul</string>
+    <string name="ad_merge">Organizare știri și reclame</string>
     <string name="add_account">Adăugaţi un cont</string>
   <string name="add_account_keywords">Adăugarea de conturi de e-mail, adăugarea de conturi de e-mail;add mail account</string>
     <string name="add_attachment">Atașaţi fișiere</string>
@@ -222,8 +221,6 @@ Actualizaţi acum?"</string>
     <string name="changepw_dialog_tips">Reintroduceţi parola pentru %s</string>
     <string name="chat_item_msg_people_unit">persoane</string>
     <string name="chat_item_msg_user_etc">etc.</string>
-    <string name="chat_view_description">Vizualizare fire de e-mail ca bule de conversații</string>
-    <string name="chat_view_title">Vizualizare ca şi conversații</string>
     <string name="check_setup_data">"    Se validează setările serverului…"</string>
     <string name="choosertitle_sharevia">Distribuiţi prin</string>
     <string name="clear">Eliminaţi</string>
@@ -324,9 +321,7 @@ Actualizaţi acum?"</string>
     <string name="dialog_gmail_proxy_server_is_error">Eroare server proxy Gmail.</string>
     <string name="dialog_insufficient_space_on_external">Nu se poate descărca ataşamentul. Spațiu insuficient în stocarea externă.</string>
     <string name="dialog_insufficient_space_on_internal">Spațiu insuficient în stocarea internă.</string>
-    <string name="disable_admin_warning">"AVERTISMENT: dacă dezactivaţi permisiunea aplicaţiei E-mail
-          de administrare a dispozitivului dvs. se şterg toate conturile de e-mail care au nevoie de aceasta, împreună cu
-          e-mailurile, agenda, evenimentele din calendar şi alte date pe care aceste conturi le conţin."</string>
+    <string name="disable_admin_warning">"AVERTISMENT: dacă dezactivaţi permisiunea aplicaţiei E-mail de administrare a dispozitivului dvs. se şterg toate conturile de e-mail care au nevoie de aceasta, împreună cu e-mailurile, agenda, evenimentele din calendar şi alte date pe care aceste conturi le conţin."</string>
     <string name="discard">Renunţaţi</string>
     <string name="discard_drafts">Renunţaţi la mesajul nefinalizat</string>
     <string name="dismiss_tip_hover_text">Ignorați sugestia</string>
@@ -373,10 +368,7 @@ Actualizaţi acum?"</string>
     Acest eveniment a fost anulat
     pentru:
 %s "</string>
-    <string name="exception_updated">"
-    Detaliile cu privire la acest eveniment au fost modificate
-    pentru:
-%s "</string>
+    <string name="exception_updated">Detaliile cu privire la acest eveniment au fost modificate pentru: %s</string>
     <string name="exchange_name">Corporaţie</string>
     <string name="exchange_name_alternate">Microsoft Exchange ActiveSync</string>
     <string name="expand_recipient_details">Extindeți detaliile destinatarului</string>
@@ -598,7 +590,7 @@ Actualizaţi acum?"</string>
     <string name="message_invite_title">Invitaţie la Calendar</string>
     <string name="message_saved">Mesaj salvat ca nefinalizat.</string>
     <string name="message_view_attachment_background_load">Atașamentele din mesajul redirecţionat vor fi descărcate înainte de trimitere.</string>
-    <string name="mibill_privacy_policy_button1">Nu sunt de acord</string>
+    <string name="mibill_privacy_policy_button1">Mai târziu</string>
     <string name="mibill_privacy_policy_button2">Acceptaţi</string>
     <string name="mibill_privacy_policy_description">Permiteţi Mi Wallet să analizeze și să gestioneze în mod automat facturile. Această caracteristică este dezactivată în mod implicit pentru adresele de e-mail legate de servici.</string>
     <string name="mibill_privacy_policy_link">"Prin utilizarea acestei funcții, sunteți de acord cu "<a href="https://www.mipay.com/res/doc/eula/email.html">Condiţiile de utilizare</a></string>
@@ -665,13 +657,12 @@ Actualizaţi acum?"</string>
     <string name="outbox_no_mails">Gol</string>
     <string name="parase_setup_data">Obţinere date…</string>
     <string name="password_expire_warning_content_title">Parola de blocare a ecranului expiră</string>
-    <string name="password_expire_warning_dialog_content_fmt">"     Este necesar să modificaţi în curând codul PIN sau parola de blocare a ecranului. În caz contrar, datele pentru %s vor fi şterse. Modificaţi acum?"</string>
+    <string name="password_expire_warning_dialog_content_fmt">Este necesar să modificaţi în curând codul PIN sau parola de blocare a ecranului. În caz contrar, datele pentru %s vor fi şterse. Modificaţi acum?</string>
     <string name="password_expire_warning_dialog_title">Parola de blocare ecran expiră în curând</string>
     <string name="password_expire_warning_ticker_fmt">"\"%s\" vă solicită să modificaţi codul PIN sau parola de blocare
               a ecranului."</string>
     <string name="password_expired_content_title">Parolă blocare ecran expirată</string>
-    <string name="password_expired_dialog_content_fmt">"     Datele pentru %s sunt şterse de pe dispozitiv.
-             Le puteţi restabili modificând codul PIN sau parola de blocare a ecranului. Modificaţi acum?"</string>
+    <string name="password_expired_dialog_content_fmt">Datele pentru %s sunt şterse de pe dispozitiv. Le puteţi restabili modificând codul PIN sau parola de blocare a ecranului. Modificaţi acum?</string>
     <string name="password_expired_dialog_title">Parola de blocare ecran este expirată</string>
     <string name="password_expired_ticker">Codul PIN sau parola de blocare a ecranului au expirat.</string>
   <string name="path_about_account_setting">Mail / Setări</string>
@@ -732,7 +723,7 @@ Actualizaţi acum?"</string>
     <string name="preference_sender_image_description">Afișați lângă nume în lista de conversații</string>
     <string name="preference_sender_image_title">Imaginea expeditorului în inbox</string>
     <string name="preferences_signature_dialog_title">Semnătură</string>
-    <string name="preferences_signature_summary_not_set">Nimic</string>
+    <string name="preferences_signature_summary_not_set">Nesetat</string>
     <string name="preferences_signature_title">Semnătură</string>
     <string name="preview_attachment">Previzualizaţi</string>
     <string name="previous_action">Înapoi</string>
@@ -771,6 +762,7 @@ Actualizaţi acum?"</string>
     <string name="quick_reply_hint">Răspundeţi la %1$d persoane</string>
     <string name="quick_reply_hint_bcc">(În BCC)</string>
     <string name="quick_reply_hint_cc">(În CC)</string>
+    <string name="quick_reply_hint_reply_only_from">Răspuns rapid (doar către expeditor)</string>
     <string name="quick_responses_empty_view">Niciun răspuns rapid</string>
     <string name="quote_begin">&lt;div class=\"wps_quotion\"&gt;</string>
     <string name="quote_divider_1">-------- Mesaj original --------</string>
@@ -834,16 +826,14 @@ Actualizaţi acum?"</string>
     <string name="search_tabs_name_subject">Subiect</string>
     <string name="search_title">E-mail unificat</string>
     <string name="search_txt_size_limit_prompt">Termenii de căutare trebuie să conţină mai mult de 3 caractere</string>
-    <string name="security_changed_ticker_fmt">"        Contul \"%s\" și- a schimbat setările sale de securitate;
-          nu este necesară nicio acțiune din partea utilizatorului."</string>
-    <string name="security_needed_ticker_fmt">"         Contul \"%s\" necesită actualizarea setărilor de securitate."</string>
+    <string name="security_changed_ticker_fmt">Contul \"%s\" și- a schimbat setările sale de securitate; nu este necesară nicio acțiune din partea utilizatorului.</string>
+    <string name="security_needed_ticker_fmt">Contul \"%s\" necesită actualizarea setărilor de securitate.</string>
     <string name="security_notification_content_change_title">"Politicile de securitate
           s-au schimbat"</string>
     <string name="security_notification_content_unsupported_title">"Solicitările de securitate nu pot fi
           îndeplinite"</string>
     <string name="security_notification_content_update_title">Actualizare de securitate necesară</string>
-    <string name="security_unsupported_ticker_fmt">"      Contul \"%s\" nu poate fi sincronizat din cauza cerințelor
-          de securitate."</string>
+    <string name="security_unsupported_ticker_fmt">"Contul \"%s\" nu poate fi sincronizat din cauza cerințelor de securitate.</string>
     <string name="select_attachment_type">Alegeţi ataşamentul din</string>
     <string name="select_no_file">Niciun ataşament selectat</string>
     <string name="selected_lable">Selectate</string>
@@ -859,6 +849,11 @@ Actualizaţi acum?"</string>
     <string name="sent_folder_selection_title">Dosar articole trimise pentru %s</string>
     <string name="ser_resp_err_map_certificate_validator_err">"Nu s-a putut valida certificatul de server
 \u0009 (Asigurați-vă că \"timpul de sincronizare automată\" este activat în Setări)"</string>
+    <string name="ser_resp_err_map_landing_more_failure">Prea multe încercări nereușite de conectare</string>
+    <string name="ser_resp_err_map_landing_too_frequently">Prea multe încercări de conectare</string>
+    <string name="ser_resp_err_map_mailbox_locked">Contul de e-mail este protejat cu parolă</string>
+    <string name="ser_resp_err_map_mailbox_not_open">Niciun cont de e-mail</string>
+    <string name="ser_resp_err_map_max_connections">Prea multe încercări de conectare</string>
     <string name="ser_resp_err_map_nouser">Utilizatorul nu există</string>
     <string name="ser_resp_err_map_or">sau</string>
     <string name="ser_resp_err_map_pserr">Nume de utilizator sau parolă incorecte</string>
@@ -895,7 +890,7 @@ Actualizaţi acum?"</string>
     <string name="special_text_sender_zh">expeditor</string>
     <string name="storage">Stocare</string>
     <string name="str_select_all">Selectaţi tot</string>
-    <string name="str_select_none">Deselectaţi tot</string>
+    <string name="str_select_none">Deselectaţi</string>
     <string name="subject_and_snippet" formatted="false">%s — %s</string>
     <string name="subject_hint">Subiect</string>
     <string name="sync_error">Sincronizarea a eşuat.</string>
@@ -911,7 +906,6 @@ Actualizaţi acum?"</string>
     <string name="tablet">tabletă</string>
     <string name="tap_to_configure">Atingeţi pentru a configura.</string>
     <string name="tap_to_enable_sync">Atingeți pentru a activa.</string>
-    <string name="tip_cannot_switchview_in_unread_folder">Imposibil de comutat vizualizarea în modul agregare e-mail necitit</string>
     <string name="to">Către</string>
     <string name="to_heading">"Către: "</string>
     <string name="toast_bar_fail_synchronization">Nu se poate conecta la rețea</string>
@@ -922,6 +916,7 @@ Actualizaţi acum?"</string>
     <string name="too_large_to_attach_additional">Fişierul nu a fost ataşat. A fost atinsă limita maximă de %1$s.</string>
     <string name="too_large_to_attach_multiple">Unul sau mai multe fişiere nu au fost ataşate. Limita maximă este de %1$s.</string>
     <string name="too_large_to_attach_single">Nu puteţi ataşa fişiere care depăşesc %1$s.</string>
+    <string name="topic_merge">Îmbinați subiectele</string>
     <string name="trash_folder_selection_title">Dosarul Coş de gunoi pentru %s</string>
     <string name="trigger_compose_char">c</string>
     <string name="trigger_refresh_char">u</string>
@@ -955,13 +950,14 @@ Actualizaţi acum?"</string>
     <string name="veiled_summary_unknown_person" />
     <string name="via_domain">prin %1$s</string>
     <string name="view_more_conversations">Vizualizaţi mai multe conversaţii</string>
-    <string name="wait_for_manual_sync_body">Acest cont nu este configurat pentru sincronizare automată.\nAtingeţi \"Sincronizaţi acum\" pentru a sincroniza e-mailurile, sau modificaţi setările de sincronizare pentru a sincroniza e-mailurile în mod automat.</string>
+    <string name="wait_for_manual_sync_body">"Acest cont nu este configurat pentru sincronizare automată.
+Atingeţi \"Sincronizaţi acum\" pentru a sincroniza e-mailurile, sau modificaţi setările de sincronizare pentru a sincroniza e-mailurile în mod automat.</string>
     <string name="wait_for_sync_title">Aşteptare sincronizare</string>
     <string name="widget_all_mail">Toate e-mailurile</string>
     <string name="widget_large_unread_count">%d+</string>
     <string name="widget_other_views">Altele</string>
-    <string name="wipe_account_fail_description">Apăsați aici pentru a obține permisiunile</string>
-    <string name="wipe_account_fail_title">Nu s-au putut șterge informațiile personale</string>
+    <string name="wipe_account_fail_description">Permiteți</string>
+    <string name="wipe_account_fail_title">"Nu s-au putut șterge informațiile personale"</string>
     <string name="wrong_password">Parola introdusă este incorectă</string>
     <string name="yes">Da</string>
     <string name="yidianzixun">Yi Dian Zixun</string>
