--- a/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XMRemoteController.apk/res/values-ro/strings.xml
@@ -109,13 +109,15 @@
     <string name="bedroom">Dormitor</string>
     <string name="bind_stb">Împerecheați set-top box</string>
     <string name="bind_stb_dlg">Împerecheați cu decodorul pentru a schimba canalele</string>
-    <string name="bind_stb_dlg_agree">Împerecheați</string>
+    <string name="bind_stb_dlg_2">Set-top box-urile trebuie să fie asociate</string>
+    <string name="bind_stb_dlg_agree">Asociați</string>
     <string name="brand_device">%2$s %1$s</string>
     <string name="brand_search_box_hint">Selectați producătorul</string>
     <string name="brand_title_all">Toate</string>
     <string name="brand_title_hot">Populare</string>
     <string name="brand_title_other">Altele</string>
     <string name="broadcast">emiteți</string>
+    <string name="btn_connected_stb">STB</string>
     <string name="bullet_hint">Afișați acest mesaj pe ecran</string>
     <string name="bulletin">Mesaje</string>
     <string name="by">"Susținut de "</string>
@@ -173,6 +175,7 @@
     <string name="data_request_error">"Nu s-au putut obține informații"</string>
     <string name="day">d</string>
     <string name="day_string">Zi</string>
+    <string name="decrease">Descreștere</string>
     <string name="delete">Ștergeți</string>
     <string name="delete_confirm">Eliminați dispozitivul?</string>
     <string name="delete_desc">"Nu veți mai putea controla “%s” cu Mi Remote."</string>
@@ -224,7 +227,10 @@
     <string name="epg_channel_operation_tip">Apăsați canalul pentru a-l edita sau pentru a-l adăuga la Favorite</string>
     <string name="epg_channel_search_hint">Adăugați numărul canalului/Căutați numele canalului</string>
     <string name="epg_comment_action_bar_title">Comentariu: %1$s</string>
+  <string name="epg_comment_agree_user">Mă place/Îmi place</string>
     <string name="epg_comment_list_title">Comentarii（%1$d）</string>
+  <string name="epg_comment_no_reply">Too low-key, nu a primit comentarii de la prieteni</string>
+    <string name="epg_comment_reply">Răspuns</string>
     <string name="epg_detail_title_text">Descriere</string>
     <string name="epg_details_episode">Ep. %1$s</string>
     <string name="epg_edit_channel_name">Numele canalului</string>
@@ -249,11 +255,12 @@
     <string name="epg_no_more_latest_comment">Nu există alte comentarii</string>
     <string name="epg_no_program_data">Nu am găsit date despre programe</string>
     <string name="epg_no_search_result">Căutarea nu a returnat niciun rezultat</string>
+    <string name="epg_no_sys_notification">Momentan nu sunt notificări de sistem</string>
     <string name="epg_not_booked_program_time_left">Rezervat （Timp rămas %1$s）</string>
     <string name="epg_program_comment">Scrieți o opinie</string>
     <string name="epg_program_detail_more_time_events">Mai multe evenimente de timp?</string>
     <string name="epg_program_share">Partajați %1$s</string>
-    <string name="epg_program_share_drama">Urmărește cu mine: %3$s Canal: %1$s, La:%2$s. Evaluați și ghiciți deznodământul cu ajutorul Telecomenzii Mi</string>
+  <string name="epg_program_share_drama">Hai cu mine să vezi %3$s Canal: %1$s, La:%2$s. Evaluați și ghiciți deznodământul cu ajutorul Telecomenzii Mi</string>
     <string name="epg_program_share_game">Urmărește cu mine: %3$s Canal: %1$s, La:%2$s.</string>
     <string name="epg_program_updated_to">Program setat la: %1$d</string>
     <string name="epg_reply_comment_prefix">\@</string>
@@ -329,6 +336,7 @@
     <string name="hour">ore</string>
     <string name="humidity">Umiditate:</string>
     <string name="humidity_frame">%1$d%%</string>
+    <string name="increase">Creșteți</string>
     <string name="input_complete">OK</string>
     <string name="input_dialogue_cancel_button">Renunțați</string>
     <string name="input_dialogue_guide1">Instalați aplicația neautorizată</string>
@@ -498,6 +506,7 @@ vă rog așteptați"</string>
     <string name="mitv">Mi TV</string>
     <string name="mitv_assistant_setting_version">Versiune asistent Mi TV %1$s</string>
     <string name="mode">Mod</string>
+    <string name="model_name">Modelul dispozitivului</string>
     <string name="month">Lună</string>
     <string name="month_day_format">dd MMM</string>
     <string name="more">Mai multe</string>
@@ -510,11 +519,15 @@ vă rog așteptați"</string>
     <string name="my_appointment">Rezervările mele</string>
     <string name="my_backup">Copiile mele de rezervă</string>
     <string name="my_favorite">Favoritele mele</string>
+    <string name="my_notification">Notificări</string>
+    <string name="my_room">Camera mea</string>
+    <string name="my_room_underline">Camera mea</string>
     <string name="my_setting">Setările mele</string>
     <string name="network_diagnosis">Testare rețea</string>
     <string name="network_no_connection">"Nu se poate conecta la rețea. Verificați conexiunea și reîncercați."</string>
     <string name="network_ok">Nu au fost detectate erori</string>
     <string name="network_unstable">· Conexiunea este stabilă</string>
+  <string name="next_remote">Următoarea telecomandă</string>
     <string name="next_step">Următorul</string>
     <string name="no">Revocare</string>
     <string name="no_backup">Nu am gasit nicio copie de rezervă</string>
@@ -543,7 +556,9 @@ vă rog așteptați"</string>
     <string name="notification_str3">\" va începe în 5 minute.</string>
     <string name="notification_title">Notificare temporizator</string>
     <string name="num_keys">Tastatură numerică</string>
+    <string name="off">Oprit</string>
     <string name="office">Birou</string>
+    <string name="on">Pornit</string>
     <string name="open">Pornit</string>
     <string name="open_close">Pornire</string>
     <string name="operator">Operator</string>
@@ -707,6 +722,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="play_on_tv">Rulează la TV</string>
     <string name="playing_time">Timp de emisie</string>
     <string name="please_enter">"Nu poate rămâne necompletat"</string>
+    <string name="please_input_model_name">Introduceți modelul dispozitivului</string>
     <string name="please_select_stb">Vă rugăm să selectați set-top box-ul</string>
     <string name="please_select_tv">Selectați televizorul</string>
     <string name="pm_2.5">PM2.5:</string>
@@ -718,6 +734,7 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="power_on">Pornit</string>
     <string name="press_to_continue_match">Apăsați pentru a continua</string>
     <string name="press_to_match">Apăsați pentru a sincroniza</string>
+  <string name="prev_remote">Telecomanda anterioară</string>
     <string name="privacy_content">"Citiți Politica de confidențialitate &lt;a href=http://www.miui.com/res/doc/privacy/en.html&gt; și Acordul utilizatorului &lt;a href=http://www.miui.com/res/doc/eula/en.html&gt; ale Xiaomi înainte de a utiliza Telecomanda Mi. Aplicația trebuie să se conecteze la internet și să acceseze localizarea pentru a funcționa în mod normal."</string>
     <string name="privacy_nohit">"Nu arăta din nou"</string>
     <string name="privacy_title">Termeni și condiții</string>
@@ -770,6 +787,9 @@ link-ul din e-mailul pe care vi l-am trimis."</string>
     <string name="reset">Restabilire</string>
     <string name="respond">Funcționează</string>
     <string name="retry_for_more">Apăsați pentru a vedea detalii</string>
+    <string name="room_guide_tips">"Controlați multiple dispozitive
+ 
+ direct din Blocarea ecranului"</string>
     <string name="save">Salvați</string>
     <string name="save_share_tips">Vă place aplicația? Puteți face o evaluare.</string>
     <string name="save_share_title">Salvați această telecomandă?</string>
@@ -827,7 +847,10 @@ de ecran"</string>
     <string name="select_all">Selectați tot</string>
     <string name="select_area">Alegeți locația</string>
     <string name="select_brand">Marcă %s</string>
+    <string name="select_controller">Selectați telecomanda</string>
+    <string name="select_done">Finalizat</string>
     <string name="select_dvb_carrier">Alegeți furnizorul de servicii</string>
+    <string name="select_screenshot_topic">Alegeți subiectul</string>
     <string name="select_stb">Selectați set-top box-ul</string>
     <string name="service_info">Informații serviciu</string>
     <string name="set_timeing_time_tip">A/C-ul va fi setat în %1$s %2$s</string>
@@ -933,6 +956,7 @@ de ecran"</string>
     <string name="timer">Temporizator</string>
     <string name="timer_turn_off">Opriți temporizatorul</string>
     <string name="timer_turn_on">Porniți temporizatorul</string>
+    <string name="title_hot_links">Link-uri populare</string>
     <string name="title_nodata_feedback">"Nu s-au putut obține informații despre dispozitiv"</string>
     <string name="to_be_used_in_these_modes">&lt;%1$s&gt;Se utilizează numai modul %2$s</string>
     <string name="to_qq">Deschideți QQ și alăturați-vă grupului nostru</string>
@@ -942,7 +966,9 @@ de ecran"</string>
     <string name="tomorrow">Mâine</string>
     <string name="tune_from_first_channel">Se începe căutarea de la canalul 1</string>
     <string name="turn_off">Închideți</string>
+    <string name="turn_off_timeing_time_tip">A/C-ul se va opri la %1$s</string>
     <string name="turn_on">Deschideți</string>
+    <string name="turn_on_timeing_time_tip">A/C-ul va porni la %1$s</string>
     <string name="tv">Televizor</string>
     <string name="tv_broadcast">TV și radio</string>
     <string name="tv_mirror">Controale pe ecranul televizorului</string>
@@ -956,6 +982,7 @@ de ecran"</string>
     <string name="unkown_device_main">"Nu se poate asocia acest dispozitiv."</string>
     <string name="unkown_device_sub">Trimiteți-ne detalii despre dispozitiv pentru a-l adăuga pe viitor în lista de aparate suportate</string>
     <string name="unkown_device_title">"Nu s-au putut obține informații despre dispozitiv"</string>
+    <string name="unset">Nesetat</string>
     <string name="updated_at">Actualizat la %1$s</string>
     <string name="updated_just_now">Actualizat acum</string>
     <string name="upgrade_already_latest">Nu există actualizări disponibile</string>
