--- a/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
+++ b/Romanian/main/AntiSpam.apk/res/values-ro/strings.xml
@@ -77,6 +77,7 @@
     <string name="close_callwait">Dezactivaţi</string>
     <string name="customizer_mode_user_define_name">Regulile mele</string>
     <string name="dlg_add_blacklist">Blocaţi acest număr?</string>
+    <string name="dlg_add_blacklist_title">Adăugați în Lista blocărilor</string>
     <string name="dlg_add_blacklist_warn_conflict_content">%1$s şi alte %2$s contacte sunt deja în lista excepțiilor.</string>
     <string name="dlg_add_blacklist_warn_conflict_title">Atenţie</string>
     <string name="dlg_add_keyword">Adaugaţi cuvinte cheie</string>
