--- a/Romanian/main/Contacts.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Contacts.apk/res/values-ro/strings.xml
@@ -165,6 +165,7 @@
     <string name="clip_dialog_title">Apelaţi numărul copiat?</string>
     <string name="close_dial_pad">Închideţi tastatura numerică</string>
     <string name="cloud_antispam_mark">Marcaţi ca spam</string>
+    <string name="cloud_antispam_marked">Marcat</string>
     <string name="cloud_antispam_title">Identificarea numerelor necunoscute</string>
     <string name="cloud_recommend_msg">Atingeți pentru a sincroniza contactele cu Mi Cloud.</string>
     <string name="cloud_state_disabled">Sincronizarea cu Mi Cloud este dezactivată</string>
@@ -1038,6 +1039,7 @@ Apăsaţi pictograma Îmbinare de mai jos pentru a începe.</string>
     <string name="search_import_from_other_phone">Contacte;Importare;alt telefon</string>
     <string name="search_import_from_sdcard">Contacte;Importare;stocare</string>
     <string name="search_import_from_sim">Contacte;Importare;Cartelă SIM</string>
+    <string name="search_input_hint">Puteți căuta numere de telefon sau servicii</string>
     <string name="search_key_photo_word">Atribuire;contact;fotografie;Contacte</string>
     <string name="search_key_rebuild_t9_index_title">Organizare;Contacte;t9</string>
     <string name="search_key_sim_manage">Organizare;Contacte</string>
