--- a/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
@@ -42,7 +42,7 @@
     <string name="restore_default">Restaurați la valorile implicite</string>
     <string name="restore_intro">"Restaurați la valorile implicite, inclusiv funcțiile și ordinea lor. Datele din telefon nu vor fi șterse."</string>
     <string name="show_on_keyguard">Afișare în blocarea ecranului</string>
-    <string name="theme_manager_not_supported">Managerul de teme nu este suportat.</string>
+    <string name="theme_manager_not_supported">"Managerul de teme nu este suportat."</string>
     <string name="vector_large_circle">m93,200c0,-59.11602 47.88398,-107 107,-107c59.11602,0 107,47.88398 107,107c0,59.11602 -47.88398,107 -107,107c-59.11602,0 -107,-47.88398 -107,-107z</string>
     <string name="vector_large_crossA">M160,160 L240,240</string>
     <string name="vector_large_crossB">M240,160 L160,240</string>
