--- a/Romanian/main/XiaomiAuthenticator.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiAuthenticator.apk/res/values-ro/strings.xml
@@ -50,7 +50,7 @@ Conectați-vă la account.xiaomi.com și apăsați Reactivare."</string>
     <string name="error_qr">Nu s-a putut citi codul QR.</string>
     <string name="error_title">Eroare</string>
     <string name="error_uri">Cheie nerecunoscută.</string>
-    <string name="forget_password">&lt;u&gt;Am uitat parola&lt;/u&gt;</string>
+    <string name="forget_password"><u>Am uitat parola<u></string>
     <string name="general_security_exception">Excepție de la securitatea generală</string>
     <string name="gif_not_support_camera_msg">Dispozitivul dumneavoastră nu suportă înregistrare video.</string>
     <string name="how_it_works_menu_item">Testare</string>
@@ -90,7 +90,7 @@ Conectați-vă la account.xiaomi.com și apăsați Reactivare."</string>
     <string name="lockpattern_tutorial_close_label">Închideți</string>
     <string name="lockpattern_tutorial_continue_label">Următorul</string>
     <string name="lockpattern_tutorial_jump_label">Săriți peste</string>
-    <string name="lockscreen_forgot_pattern_button_text">&lt;u&gt;Model de deblocare uitat&lt;/u&gt;</string>
+    <string name="lockscreen_forgot_pattern_button_text"><u>Model de deblocare uitat<u></string>
     <string name="login">autentificare</string>
     <string name="main_preference_screen_title">Setări</string>
     <string name="mycard_scan_barcode">Scaner de coduri de identificare Mi</string>
@@ -167,7 +167,7 @@ Puteți："</string>
     <string name="title_updatepattern">Modificați parola</string>
     <string name="title_visible_pattern">Faceți modelul vizibil</string>
     <string name="type_prompt">Tipul de cheie</string>
-    <string name="update_pattern_jump">&lt;u&gt;Eliminați parola&lt;/u&gt;</string>
+    <string name="update_pattern_jump"><u>Eliminați parola<u></string>
     <string name="version_preference_title">Versiune</string>
     <string name="welcome_page_alert">"&lt;font color=#fb3500&gt;* &lt;/font&gt;Dacă ștergeți Mi Security Token, nu vă veți mai putea conecta la contul dumneavoastră."</string>
     <string name="welcome_page_details">"— Păstrați-vă contul în siguranță.
