--- a/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
+++ b/Romanian/main/framework-ext-res.apk/res/values-ro/strings.xml
@@ -14,6 +14,7 @@
     <string name="auto_disable_screenbuttons_prompts_not_show_again">Nu arăta din nou</string>
     <string name="auto_disable_screenbuttons_prompts_ok">OK</string>
     <string name="auto_disable_screenbuttons_prompts_title">Dezactivați butoanele de navigare?</string>
+    <string name="auto_disable_screenbuttons_tap_again_exit_toast_text">Atingeți din nou pentru a ieși</string>
     <string name="auto_start_warning_allow">Permiteţi</string>
     <string name="auto_start_warning_deny">Refuzaţi</string>
     <string name="auto_start_warning_title">Permiteţi %s să pornească în mod automat?</string>
